Testing/fixing collapsing function

--- a/dashboard.css
+++ b/dashboard.css
@@ -56,7 +56,7 @@ body {
 
 /* TOGGLE ICON */
 .toggle {
-    font-size: 36px;
+    font-size: 24px;
     font-weight: bold;
     color: #aaa;
 }
